# bnrs_replication

./: .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml
bnrs_algorithm/: 01_preprocess.ipynb  02_recommend.ipynb
bnrs_algorithm/utils/: keybert_return_embeds.py
bnrs_analysis/: 01_preprocess.ipynb  02_models.ipynb
bnrs_analysis/data/processed/: HxRyRz_recs.json  model_df.csv  supplement_df.csv  transitions.json
